--- a/css/_media.scss
+++ b/css/_media.scss
@@ -936,21 +936,124 @@ body {
 // Preloader
 
 @media (min-width: 320px) and (max-width: 575.98px) {
+   .road_line_wrapper {
+      display: none !important;
+   }
+   .graphic_img{
+    bottom: -165px !important;
+}
+   .road_line_col_item_info_list {
+      padding-right: 15px !important;
+   }
+   .road_line_col_item_number {
+      margin: auto;
+   }
+   .road_line {
+      .section_title {
+         margin-bottom: 50px;
+      }
+   }
+   .road_line_col_item_info_title {
+      font-size: 30px !important;
+      line-height: 36px !important;
+   }
+   .road_line_col_item_info_list {
+      li {
+         font-size: 21px !important;
+         line-height: 30px !important;
+      }
+   }
+   .road_line_wrapper_mobile {
+    .mobile_line  {
+         left: 1% !important;
+         height: 100% !important;
+         max-width: 12px !important;
+      }
+      .road_line_col_item {
+         flex-direction: column;
+         justify-content: center;
+      }
+   }
 }
 
 @media (min-width: 576px) and (max-width: 767.98px) {
+   .road_line_wrapper {
+      display: none !important;
+   }
+   .road_line_col_item_info_list {
+      padding-right: 15px !important;
+   }
+   .road_line_col_item_number {
+      margin: auto;
+   }
+   .road_line {
+      .section_title {
+         margin-bottom: 50px;
+      }
+   }
+   .road_line_wrapper_mobile {
+    .mobile_line  {
+        left: 1.6% !important;
+        height: 100% !important;
+        max-width: 12px !important;
+     }
+      .road_line_col_item {
+         flex-direction: column;
+         justify-content: center;
+      }
+   }
 }
 
 @media (min-width: 768px) and (max-width: 991.98px) {
+   .road_line_wrapper {
+      display: none !important;
+   }
+   .road_line_col_item_info_list {
+      padding-right: 15px !important;
+   }
+   .road_line_wrapper_mobile {
+    .mobile_line  {
+         left: 2% !important;
+      }
+   }
+   .road_line {
+      .section_title {
+         margin-bottom: 50px;
+      }
+   }
 }
 
 @media (min-width: 992px) and (max-width: 1199.98px) {
+   .road_line_wrapper {
+      display: none !important;
+   }
+   .road_line_col_item_info_list {
+      padding-right: 15px !important;
+   }
+   .road_line {
+      .section_title {
+         margin-bottom: 50px;
+      }
+   }
+   .graphic_img{
+    display: none !important;
+   }
 }
 
 @media (min-width: 1200px) and (max-width: 1399.98px) {
+   .road_line_col_item_info_list {
+      padding-right: 15px !important;
+   }
+   .road_line_wrapper_mobile {
+      display: none !important;
+   }
 }
 
 @media (min-width: 1400px) {
+   .road_line_wrapper_mobile {
+      display: none !important;
+   }
+
    // .load_cat {
    //     top: 59%;
    //     left: 54%;
