--- a/css/main.css
+++ b/css/main.css
@@ -869,6 +869,114 @@
     width: 100%;
   }
 }
+@media (min-width: 320px) and (max-width: 575.98px) {
+  .road_line_wrapper {
+    display: none !important;
+  }
+  .graphic_img {
+    bottom: -165px !important;
+  }
+  .road_line_col_item_info_list {
+    padding-right: 15px !important;
+  }
+  .road_line_col_item_number {
+    margin: auto;
+  }
+  .road_line .section_title {
+    margin-bottom: 50px;
+  }
+  .road_line_col_item_info_title {
+    font-size: 30px !important;
+    line-height: 36px !important;
+  }
+  .road_line_col_item_info_list li {
+    font-size: 21px !important;
+    line-height: 30px !important;
+  }
+  .road_line_wrapper_mobile .mobile_line {
+    left: 1% !important;
+    height: 100% !important;
+    max-width: 12px !important;
+  }
+  .road_line_wrapper_mobile .road_line_col_item {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .road_line_wrapper {
+    display: none !important;
+  }
+  .road_line_col_item_info_list {
+    padding-right: 15px !important;
+  }
+  .road_line_col_item_number {
+    margin: auto;
+  }
+  .road_line .section_title {
+    margin-bottom: 50px;
+  }
+  .road_line_wrapper_mobile .mobile_line {
+    left: 1.6% !important;
+    height: 100% !important;
+    max-width: 12px !important;
+  }
+  .road_line_wrapper_mobile .road_line_col_item {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .road_line_wrapper {
+    display: none !important;
+  }
+  .road_line_col_item_info_list {
+    padding-right: 15px !important;
+  }
+  .road_line_wrapper_mobile .mobile_line {
+    left: 2% !important;
+  }
+  .road_line .section_title {
+    margin-bottom: 50px;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  .road_line_wrapper {
+    display: none !important;
+  }
+  .road_line_col_item_info_list {
+    padding-right: 15px !important;
+  }
+  .road_line .section_title {
+    margin-bottom: 50px;
+  }
+  .graphic_img {
+    display: none !important;
+  }
+}
+@media (min-width: 1200px) and (max-width: 1399.98px) {
+  .road_line_col_item_info_list {
+    padding-right: 15px !important;
+  }
+  .road_line_wrapper_mobile {
+    display: none !important;
+  }
+}
+@media (min-width: 1400px) {
+  .road_line_wrapper_mobile {
+    display: none !important;
+  }
+}
 @media (min-width: 1200px) and (max-width: 1399.98px) {
   .element-animation {
     /* Скроем элемент в начальном состоянии */
@@ -1055,7 +1163,7 @@ body {
 }
 body::-webkit-scrollbar {
   z-index: 999999999999999900000000000000000000 !important;
-  background: #162657;
+  background: #101932;
 }
 body::-webkit-scrollbar-track {
   z-index: 999999999999999900000000000000000000 !important;
@@ -1576,6 +1684,8 @@ h1 span {
 
 .img_absolute {
   position: absolute;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 .img_absolute:hover {
   -webkit-transform: scale(1.2);
@@ -1971,4 +2081,168 @@ h1 span {
 
 .loaded .preloader {
   display: none;
+}
+
+.road_line {
+  background: #101932;
+  padding: 70px 15px 130px;
+}
+
+.road_line_wrapper {
+  width: 100%;
+  max-width: 1624px;
+  margin: 50px auto 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 19px;
+}
+
+.road_line_col {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 395px;
+  width: 792px;
+}
+
+.road_line_col2 {
+  margin-top: 276px;
+}
+
+.road_line_col_item {
+  background: rgba(56, 77, 112, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 30px;
+  padding: 35px 0 35px 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+  width: 100%;
+  cursor: pointer;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+.road_line_col_item:hover {
+  background: #384d70;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+.road_line_col_item:hover .road_line_col_item_number {
+  background: rgba(255, 255, 255, 0.1);
+}
+.road_line_col_item:hover .road_line_col_item_number .road_line_col_item_number_number {
+  color: #ffffff;
+  opacity: 0.7;
+}
+
+.line_img {
+  height: 1693px;
+  margin: 102px auto 0;
+}
+
+.road_line_col_item_number_number {
+  font-family: "SF Pro Display Bold";
+  font-size: 65px;
+  line-height: 78px;
+  color: #ffffff;
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+.road_line_col_item_number {
+  background: rgba(56, 77, 112, 0.2);
+  border-radius: 30px;
+  padding: 34px 53px;
+  max-height: 146px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.road_line_col_item_info_title {
+  font-family: "SF Pro Display Medium";
+  font-size: 30px;
+  line-height: 36px;
+  color: #ffffff;
+  margin-bottom: 20px;
+  opacity: 0.7;
+}
+
+.road_line_col_item_info_list li {
+  font-family: "SF Pro Display Regular";
+  font-size: 25px;
+  line-height: 30px;
+  color: #ffffff;
+  opacity: 0.7;
+}
+
+.road_line_wrapper_mobile {
+  overflow-y: auto;
+  scroll-behavior: smooth;
+  position: relative;
+  height: 869px;
+  padding-bottom: 177px;
+}
+.road_line_wrapper_mobile::-webkit-scrollbar {
+  z-index: 999999999999999900000000000000000000 !important;
+  background: #101932;
+  width: 3px;
+}
+.road_line_wrapper_mobile::-webkit-scrollbar-track {
+  z-index: 999999999999999900000000000000000000 !important;
+  width: 3px;
+}
+.road_line_wrapper_mobile::-webkit-scrollbar-thumb {
+  z-index: 999999999999999900000000000000000000 !important;
+  background: #2848a8;
+  border-radius: 20px;
+  width: 100%;
+}
+.road_line_wrapper_mobile .mobile_line {
+  height: 1450px;
+  position: absolute;
+  top: 6%;
+  left: 22px;
+}
+
+.graphic_img {
+  width: 100%;
+  z-index: 212;
+  position: absolute;
+  bottom: -254px;
+  left: 0;
+}
+
+.road_line_wrapper_mobile_items {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+}
+.road_line_wrapper_mobile_items .road_line_col_item {
+  width: 95% !important;
+  margin: auto;
+}
+.road_line_wrapper_mobile_items .road_line_col_item .road_line_col_item_number {
+  width: 97px;
+  height: 100px;
+  padding: 10px 0 12px;
+}
+.road_line_wrapper_mobile_items .road_line_col_item .road_line_col_item_number .road_line_col_item_number_number {
+  font-size: 65px !important;
+  line-height: 78px !important;
+  text-align: center;
 }
