--- a/css/_media.scss
+++ b/css/_media.scss
@@ -939,9 +939,9 @@ body {
    .road_line_wrapper {
       display: none !important;
    }
-   .graphic_img{
-    bottom: -165px !important;
-}
+   .graphic_img {
+      bottom: -165px !important;
+   }
    .road_line_col_item_info_list {
       padding-right: 15px !important;
    }
@@ -964,7 +964,7 @@ body {
       }
    }
    .road_line_wrapper_mobile {
-    .mobile_line  {
+      .mobile_line {
          left: 1% !important;
          height: 100% !important;
          max-width: 12px !important;
@@ -972,6 +972,12 @@ body {
       .road_line_col_item {
          flex-direction: column;
          justify-content: center;
+      }
+   }
+   .team_item {
+      img {
+         width: 280px;
+         height: 270px;
       }
    }
 }
@@ -992,11 +998,11 @@ body {
       }
    }
    .road_line_wrapper_mobile {
-    .mobile_line  {
-        left: 1.6% !important;
-        height: 100% !important;
-        max-width: 12px !important;
-     }
+      .mobile_line {
+         left: 1.6% !important;
+         height: 100% !important;
+         max-width: 12px !important;
+      }
       .road_line_col_item {
          flex-direction: column;
          justify-content: center;
@@ -1012,7 +1018,7 @@ body {
       padding-right: 15px !important;
    }
    .road_line_wrapper_mobile {
-    .mobile_line  {
+      .mobile_line {
          left: 2% !important;
       }
    }
@@ -1035,8 +1041,8 @@ body {
          margin-bottom: 50px;
       }
    }
-   .graphic_img{
-    display: none !important;
+   .graphic_img {
+      display: none !important;
    }
 }
 
